syntax = "proto3";

option java_multiple_files = true;
option java_package = "dk.dsrhorsens.volunteers.proto.authentication";
option csharp_namespace = "auth_API.AuthenticationProto";

package dsr.authentication;

service AuthenticationService {
  // verify whether a cookie is valid and to which UUID it belongs to
  rpc verifyCookie (CookieVerification) returns (VerificationResponse) {}
  // start listening to cookie invalidation requests
  rpc startListening (EmptyMessage) returns (stream InvalidatedCookie) {}
}

// To get logged in user's details
message CookieVerification {
  string authentication_cookie = 1;
}

// The verification cookie request response
message VerificationResponse {
  // whether the cookie is valid
  bool valid_cookie = 1;
  // user's UUID if the cookie is valid (defaults to 0)
  int64 uuid = 2;
  // the authentication cookie, which was checked
  string authentication_cookie = 3;
}

// An empty template message
message EmptyMessage {
  bool im_empty = 1;
}

// A notification about an authentication cookie which was invalidated on the authentication server
message InvalidatedCookie {
  // The cookie which was invalidated
  string authentication_cookie = 1;
  // The UUID of the user which it belonged to
  int64 uuid = 2;
}